Modified Files:  	Makefile.am SGStateAttributeVisitor.hxx  	SGTextureStateAttributeVisitor.hxx Added Files: 	SGStateAttributeVisitor.cxx SGTextureStateAttributeVisitor.cxx: 	Move implementation into cxx files

--- a/simgear/scene/util/Makefile.am
+++ b/simgear/scene/util/Makefile.am
@@ -11,6 +11,8 @@ include_HEADERS = \
 	SGStateAttributeVisitor.hxx \
 	SGTextureStateAttributeVisitor.hxx
 
-libsgutil_a_SOURCES =
+libsgutil_a_SOURCES = \
+	SGStateAttributeVisitor.cxx \
+	SGTextureStateAttributeVisitor.cxx
 
 INCLUDES = -I$(top_srcdir)
