Modified Files: 	Makefile.am SGMath.hxx SGMathFwd.hxx SGMatrix.hxx SGQuat.hxx Added Files: 	SGVec2.hxx 	Improove the matrix functions. Improove the quaterion functions. 	Add the 2d vector.

--- a/simgear/math/Makefile.am
+++ b/simgear/math/Makefile.am
@@ -30,7 +30,8 @@ include_HEADERS = \
 	SGMisc.hxx \
 	SGQuat.hxx \
 	SGVec4.hxx \
-	SGVec3.hxx
+	SGVec3.hxx \
+	SGVec2.hxx
 
 
 libsgmath_a_SOURCES = \
