--- a/projects/VC8/SimGear.vcproj
+++ b/projects/VC8/SimGear.vcproj
@@ -41,11 +41,11 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../..;../../..;../../Simgear;../../../devel/include"
+				AdditionalIncludeDirectories="../..;../../..;../../Simgear;../../../3rdparty/include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;HAVE_CONFIG_H;ENABLE_THREADS;_CRT_SECURE_NO_DEPRECATE;_CONST_CORRECT_OVERLOADS;NOMINMAX;_USE_MATH_DEFINES"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="1"
+				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="false"
@@ -103,11 +103,11 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="2"
-				AdditionalIncludeDirectories="../..;../../..;../../Simgear;../../../devel/include"
+				AdditionalIncludeDirectories="../..;../../..;../../Simgear;../../../3rdparty/include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;HAVE_CONFIG_H;ENABLE_THREADS;_CRT_SECURE_NO_DEPRECATE;_CONST_CORRECT_OVERLOADS;NOMINMAX;_USE_MATH_DEFINES"
 				StringPooling="true"
 				MinimalRebuild="true"
-				RuntimeLibrary="0"
+				RuntimeLibrary="2"
 				FloatingPointModel="2"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -213,10 +213,6 @@
 			</File>
 			<File
 				RelativePath="..\..\simgear\magvar\coremag.hxx"
-				>
-			</File>
-			<File
-				RelativePath="..\..\simgear\scene\model\custtrans.hxx"
 				>
 			</File>
 			<File
@@ -798,10 +794,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\simgear\scene\model\custtrans.cxx"
-				>
-			</File>
-			<File
 				RelativePath="..\..\simgear\scene\sky\dome.cxx"
 				>
 			</File>
@@ -1079,10 +1071,6 @@
 			</File>
 			<File
 				RelativePath="..\..\simgear\screen\shader.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\simgear\scene\model\shadowvolume.cxx"
 				>
 			</File>
 			<File
