Modified Files: 	simgear/Makefile.am: Make 'make distclean' work

--- a/simgear/Makefile.am
+++ b/simgear/Makefile.am
@@ -34,4 +34,4 @@ SUBDIRS = \
 	$(SGTHREAD_DIR) \
 	timing
 
-DIST_SUBDIRS = $(SUBDIRS) compatibility threads
+DIST_SUBDIRS = $(SUBDIRS) compatibility
