Modified Files: 	simgear/scene/model/Makefile.am 	simgear/scene/model/animation.cxx 	simgear/scene/model/animation.hxx 	simgear/scene/model/model.cxx 	simgear/scene/model/persparam.cxx 	simgear/scene/model/persparam.hxx 	simgear/scene/model/shadanim.cxx Added Files: 	simgear/scene/model/SGMaterialAnimation.cxx 	simgear/scene/model/SGMaterialAnimation.hxx 	Big animation overhaul. Improoves animation correctness.

--- a/simgear/scene/model/Makefile.am
+++ b/simgear/scene/model/Makefile.am
@@ -11,7 +11,8 @@ include_HEADERS = \
 	modellib.hxx \
 	persparam.hxx \
 	placement.hxx \
-	placementtrans.hxx
+	placementtrans.hxx \
+	SGMaterialAnimation.hxx
 
 libsgmodel_a_SOURCES = \
 	animation.cxx \
@@ -21,6 +22,7 @@ libsgmodel_a_SOURCES = \
 	persparam.cxx \
 	placement.cxx \
 	placementtrans.cxx \
-	shadanim.cxx
+	shadanim.cxx \
+	SGMaterialAnimation.cxx
 
 INCLUDES = -I$(top_srcdir)
