Wether you like it or not, MispPro needs these libraries referenced

--- a/simgear/route/Makefile.am
+++ b/simgear/route/Makefile.am
@@ -19,6 +19,9 @@ waytest_LDADD = \
 	$(top_builddir)/simgear/math/libsgmath.a \
 	$(top_builddir)/simgear/debug/libsgdebug.a \
 	$(top_builddir)/simgear/misc/libsgmisc.a \
+	$(top_builddir)/simgear/props/libsgprops.a \
+	$(top_builddir)/simgear/structure/libsgstructure.a \
+	$(top_builddir)/simgear/xml/libsgxml.a \
 	$(base_LIBS) \
 	-lz
 
