--- a/simgear/structure/Makefile.am
+++ b/simgear/structure/Makefile.am
@@ -8,6 +8,7 @@ include_HEADERS = \
 	exception.hxx \
 	event_mgr.hxx \
 	subsystem_mgr.hxx \
+	SGAtomic.hxx \
 	SGReferenced.hxx \
 	SGSharedPtr.hxx
 
@@ -15,8 +16,8 @@ libsgstructure_a_SOURCES = \
 	commands.cxx \
 	exception.cxx \
 	event_mgr.cxx\
-	subsystem_mgr.cxx
-
+	subsystem_mgr.cxx \
+	SGAtomic.cxx
 
 INCLUDES = -I$(top_srcdir)
 
