Modified Files: 	Makefile.am SGNodeMasks.hxx Added Files: 	SGPickCallback.hxx SGSceneUserData.hxx: Preparations for generic 	scenery picking.

--- a/simgear/scene/util/Makefile.am
+++ b/simgear/scene/util/Makefile.am
@@ -8,6 +8,8 @@ include_HEADERS = \
 	SGNodeMasks.hxx \
 	SGUpdateVisitor.hxx \
 	SGDebugDrawCallback.hxx \
+	SGPickCallback.hxx \
+	SGSceneUserData.hxx \
 	SGStateAttributeVisitor.hxx \
 	SGTextureStateAttributeVisitor.hxx
 
