Add SGBinding.[ch]xx to the MSVC 7.1 project

--- a/projects/VC7.1/SimGear.vcproj
+++ b/projects/VC7.1/SimGear.vcproj
@@ -855,6 +855,12 @@
 				RelativePath="..\..\simgear\structure\exception.hxx">
 			</File>
 			<File
+				RelativePath="..\..\simgear\structure\SGBinding.cxx">
+			</File>
+			<File
+				RelativePath="..\..\simgear\structure\SGBinding.hxx">
+			</File>
+			<File
 				RelativePath="..\..\simgear\structure\SGReferenced.hxx">
 			</File>
 			<File
