Update MSVC 7.1 project file and fix win32 compilation

--- a/projects/VC7.1/SimGear.vcproj
+++ b/projects/VC7.1/SimGear.vcproj
@@ -983,6 +983,12 @@
 				RelativePath="..\..\simgear\scene\util\SGNodeMasks.hxx">
 			</File>
 			<File
+				RelativePath="..\..\simgear\scene\util\SGSceneUserData.cxx">
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\util\SGSceneUserData.hxx">
+			</File>
+			<File
 				RelativePath="..\..\simgear\scene\util\SGStateAttributeVisitor.cxx">
 			</File>
 			<File
