--- a/projects/VC8/SimGear.vcproj
+++ b/projects/VC8/SimGear.vcproj
@@ -41,11 +41,11 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../..;../../..;../../../OpenThreads/include;../../../OpenSceneGraph/include;../../Simgear;../../../3rdparty/include"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;HAVE_CONFIG_H;PTW32_STATIC_LIB;PR_LIBRARY_STATIC;OSG_LIBRARY_STATIC;OT_LIBRARY_STATIC;ENABLE_THREADS;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_CONST_CORRECT_OVERLOADS;NOMINMAX;_USE_MATH_DEFINES"
+				AdditionalIncludeDirectories="../..;../../..;$(ProgramFiles)/OpenThreads/include;$(ProgramFiles)/OpenSceneGraph/include;../../Simgear;../../../3rdparty/include"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;HAVE_CONFIG_H;ENABLE_THREADS;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_CONST_CORRECT_OVERLOADS;NOMINMAX;_USE_MATH_DEFINES"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="1"
+				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="false"
@@ -103,11 +103,11 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="2"
-				AdditionalIncludeDirectories="../..;../../..;../../../OpenThreads/include;../../../OpenSceneGraph/include;../../Simgear;../../../3rdparty/include"
-				PreprocessorDefinitions="WIN32;NDEBUG;PTW32_STATIC_LIB;PR_LIBRARY_STATIC;OSG_LIBRARY_STATIC;OT_LIBRARY_STATIC;_WINDOWS;HAVE_CONFIG_H;ENABLE_THREADS;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_CONST_CORRECT_OVERLOADS;NOMINMAX;_USE_MATH_DEFINES"
+				AdditionalIncludeDirectories="../..;../../..;$(ProgramFiles)/OpenThreads/include;$(ProgramFiles)/OpenSceneGraph/include;../../Simgear;../../../3rdparty/include"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;HAVE_CONFIG_H;ENABLE_THREADS;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_CONST_CORRECT_OVERLOADS;NOMINMAX;_USE_MATH_DEFINES"
 				StringPooling="true"
 				MinimalRebuild="true"
-				RuntimeLibrary="0"
+				RuntimeLibrary="2"
 				FloatingPointModel="2"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -784,6 +784,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\simgear\nasal\bitslib.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\simgear\ephemeris\celestialBody.cxx"
 				>
 			</File>
@@ -869,6 +873,10 @@
 			</File>
 			<File
 				RelativePath="..\..\simgear\io\iochannel.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\nasal\iolib.c"
 				>
 			</File>
 			<File
@@ -1168,6 +1176,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\simgear\nasal\threadlib.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\simgear\timing\timestamp.cxx"
 				>
 			</File>
@@ -1185,6 +1197,10 @@
 			</File>
 			<File
 				RelativePath="..\..\simgear\scene\tgdb\userdata.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\nasal\utf8lib.c"
 				>
 			</File>
 			<File
