Modified Files: 	simgear/bucket/newbucket.cxx simgear/bucket/newbucket.hxx 	simgear/io/decode_binobj.cxx simgear/io/sg_binobj.cxx 	simgear/io/sg_binobj.hxx simgear/math/SGVec2.hxx 	simgear/math/SGVec3.hxx simgear/math/SGVec4.hxx 	simgear/scene/material/mat.hxx 	simgear/scene/material/matlib.cxx 	simgear/scene/material/matlib.hxx 	simgear/scene/model/Makefile.am simgear/scene/tgdb/Makefile.am 	simgear/scene/tgdb/obj.cxx simgear/scene/tgdb/obj.hxx 	simgear/scene/tgdb/pt_lights.cxx 	simgear/scene/tgdb/pt_lights.hxx 	simgear/scene/util/Makefile.am 	simgear/scene/util/SGNodeMasks.hxx 	simgear/scene/util/SGTextureStateAttributeVisitor.cxx Added Files: 	simgear/scene/model/SGOffsetTransform.cxx 	simgear/scene/model/SGOffsetTransform.hxx 	simgear/scene/tgdb/SGDirectionalLightBin.hxx 	simgear/scene/tgdb/SGLightBin.hxx 	simgear/scene/tgdb/SGOceanTile.cxx 	simgear/scene/tgdb/SGOceanTile.hxx 	simgear/scene/tgdb/SGTexturedTriangleBin.hxx 	simgear/scene/tgdb/SGTriangleBin.hxx 	simgear/scene/tgdb/SGVasiDrawable.cxx 	simgear/scene/tgdb/SGVasiDrawable.hxx 	simgear/scene/tgdb/SGVertexArrayBin.hxx 	simgear/scene/util/SGEnlargeBoundingBox.cxx 	simgear/scene/util/SGEnlargeBoundingBox.hxx 	simgear/scene/util/SGSceneFeatures.cxx 	simgear/scene/util/SGSceneFeatures.hxx Removed Files: 	simgear/scene/tgdb/leaf.hxx simgear/scene/tgdb/vasi.hxx: 	Reorganize tile loaders. 	Build bigger leafs for the tiles. 	Move runway light colors into materials.xml. 	Split out classes that might be useful at other places. 	Avoid static storage on binobject loading.

--- a/simgear/scene/model/Makefile.am
+++ b/simgear/scene/model/Makefile.am
@@ -12,7 +12,8 @@ include_HEADERS = \
 	persparam.hxx \
 	placement.hxx \
 	placementtrans.hxx \
-	SGMaterialAnimation.hxx
+	SGMaterialAnimation.hxx \
+	SGOffsetTransform.hxx
 
 libsgmodel_a_SOURCES = \
 	animation.cxx \
@@ -23,6 +24,7 @@ libsgmodel_a_SOURCES = \
 	placement.cxx \
 	placementtrans.cxx \
 	shadanim.cxx \
-	SGMaterialAnimation.cxx
+	SGMaterialAnimation.cxx \
+	SGOffsetTransform.cxx
 
 INCLUDES = -I$(top_srcdir)
