--- a/simgear/scene/tgdb/Makefile.am
+++ b/simgear/scene/tgdb/Makefile.am
@@ -6,17 +6,24 @@ noinst_HEADERS =
 
 include_HEADERS = \
 	apt_signs.hxx \
-	leaf.hxx \
 	obj.hxx \
 	pt_lights.hxx \
 	userdata.hxx \
-	vasi.hxx
+	SGOceanTile.hxx \
+	SGVasiDrawable.hxx \
+	SGDirectionalLightBin.hxx \
+	SGLightBin.hxx \
+	SGOceanTile.hxx \
+	SGTexturedTriangleBin.hxx \
+	SGTriangleBin.hxx \
+	SGVertexArrayBin.hxx
 
 libsgtgdb_a_SOURCES = \
 	apt_signs.cxx \
-	leaf.cxx \
 	obj.cxx \
 	pt_lights.cxx \
-	userdata.cxx
+	userdata.cxx \
+	SGOceanTile.cxx \
+	SGVasiDrawable.cxx
 
 INCLUDES = -I$(top_srcdir)
