--- a/simgear/scene/util/Makefile.am
+++ b/simgear/scene/util/Makefile.am
@@ -7,13 +7,17 @@ noinst_HEADERS =
 include_HEADERS = \
 	SGNodeMasks.hxx \
 	SGUpdateVisitor.hxx \
+	SGEnlargeBoundingBox.hxx \
 	SGDebugDrawCallback.hxx \
 	SGPickCallback.hxx \
+	SGSceneFeatures.hxx \
 	SGSceneUserData.hxx \
 	SGStateAttributeVisitor.hxx \
 	SGTextureStateAttributeVisitor.hxx
 
 libsgutil_a_SOURCES = \
+	SGEnlargeBoundingBox.cxx \
+	SGSceneFeatures.cxx \
 	SGSceneUserData.cxx \
 	SGStateAttributeVisitor.cxx \
 	SGTextureStateAttributeVisitor.cxx
