Modified Files: 	simgear/scene/model/Makefile.am 	simgear/scene/model/animation.cxx 	simgear/scene/model/animation.hxx Added Files: 	simgear/scene/model/SGRotateTransform.cxx 	simgear/scene/model/SGRotateTransform.hxx 	simgear/scene/model/SGScaleTransform.cxx 	simgear/scene/model/SGScaleTransform.hxx 	simgear/scene/model/SGTranslateTransform.cxx 	simgear/scene/model/SGTranslateTransform.hxx: 	Factor out some useful classes.

--- a/simgear/scene/model/Makefile.am
+++ b/simgear/scene/model/Makefile.am
@@ -13,7 +13,10 @@ include_HEADERS = \
 	placement.hxx \
 	placementtrans.hxx \
 	SGMaterialAnimation.hxx \
-	SGOffsetTransform.hxx
+	SGOffsetTransform.hxx \
+	SGRotateTransform.hxx \
+	SGScaleTransform.hxx \
+	SGTranslateTransform.hxx
 
 libsgmodel_a_SOURCES = \
 	animation.cxx \
@@ -25,6 +28,9 @@ libsgmodel_a_SOURCES = \
 	placementtrans.cxx \
 	shadanim.cxx \
 	SGMaterialAnimation.cxx \
-	SGOffsetTransform.cxx
+	SGOffsetTransform.cxx \
+	SGRotateTransform.cxx \
+	SGScaleTransform.cxx \
+	SGTranslateTransform.cxx
 
 INCLUDES = -I$(top_srcdir)
