--- a/simgear/magvar/Makefile.am
+++ b/simgear/magvar/Makefile.am
@@ -13,7 +13,7 @@ noinst_PROGRAMS = testmagvar
 testmagvar_SOURCES = testmagvar.cxx
 
 testmagvar_LDADD = \
-	$(top_builddir)/simgear/magvar/libsgmagvar.a \
+	libsgmagvar.a \
 	$(base_LIBS)
 
 INCLUDES = -I$(top_srcdir)
