--- a/simgear/bucket/Makefile.am
+++ b/simgear/bucket/Makefile.am
@@ -11,7 +11,7 @@ libsgbucket_a_SOURCES = newbucket.cxx
 # testbucket_SOURCES = testbucket.cxx
 
 # testbucket_LDADD = \
-# 	$(top_builddir)/bucket/libsgbucket.a \
+# 	libsgbucket.a \
 # 	$(top_builddir)/misc/libsgmisc.a
 
 INCLUDES = -I$(top_srcdir)
