Modified Files: 	projects/VC8/SimGear.vcproj: 	MSVC8 Build system updates from Olaf Flebbe.

--- a/projects/VC8/SimGear.vcproj
+++ b/projects/VC8/SimGear.vcproj
@@ -584,6 +584,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\simgear\scene\tgdb\SGReaderWriterBTG.hxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\tgdb\SGReaderWriterBTGOptions.hxx"
+				>
+			</File>
+			<File
 				RelativePath="..\..\simgear\structure\SGReferenced.hxx"
 				>
 			</File>
@@ -1129,6 +1137,10 @@
 			</File>
 			<File
 				RelativePath="..\..\simgear\scene\model\SGOffsetTransform.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\simgear\scene\tgdb\SGReaderWriterBTG.cxx"
 				>
 			</File>
 			<File
