Add curvature to ocean tiles.
An apron around the tile hides cracks with coastal tiles.

The VectorArrayAdapter, which lives in the simgear namespace, is a useful
utility class for treating vectors as 2D arrays.

--- a/simgear/scene/util/Makefile.am
+++ b/simgear/scene/util/Makefile.am
@@ -13,7 +13,9 @@ include_HEADERS = \
 	SGSceneFeatures.hxx \
 	SGSceneUserData.hxx \
 	SGStateAttributeVisitor.hxx \
-	SGTextureStateAttributeVisitor.hxx
+	SGTextureStateAttributeVisitor.hxx \
+	VectorArrayAdapter.hxx
+
 
 libsgutil_a_SOURCES = \
 	SGEnlargeBoundingBox.cxx \
