Documentation fixes: Updated the contents of README.plib and README.OpenAL Also make sure that these files are included in the release. This is required, since ./configure refers to these files.

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,6 +4,8 @@ EXTRA_DIST = \
 	DoxygenMain.cxx \
 	README.MSVC \
 	README.zlib \
+	README.plib \
+	README.OpenAL \
 	projects \
 	SimGear.dsp \
 	SimGear.dsw
