Add separate check for openal and ALUT, as these are now separate.

--- a/configure.ac
+++ b/configure.ac
@@ -268,6 +268,7 @@ LIBS="$base_LIBS"
 
 dnl check for OpenAL libraries
 OPENAL_OK="no"
+ALUT_OK="no"
 case "${host}" in
 *-*-cygwin* | *-*-mingw32*)
     dnl CygWin under Windoze.
@@ -278,6 +279,7 @@ case "${host}" in
     LIBS="$LIBS -lwinmm -ldsound -ldxguid -lole32"
     openal_LIBS="$LIBS"
     OPENAL_OK="$ac_cv_search_alGenBuffers"
+    ALUT_OK="$ac_cv_search_alutInit"
     ;;
 
 *-apple-darwin*)
@@ -287,6 +289,7 @@ case "${host}" in
     openal_LIBS="$LIBS"
     # not sure how to test if OpenAL exists on MacOS (does it come by default?)
     OPENAL_OK="yes"
+    ALUT_OK="yes"
     ;;
 
 *)
@@ -297,6 +300,7 @@ case "${host}" in
     AC_SEARCH_LIBS(alGenBuffers, openal)
     AC_SEARCH_LIBS(alutInit, [ alut openal ] )
     OPENAL_OK="$ac_cv_search_alGenBuffers"
+    ALUT_OK="$ac_cv_search_alutInit"
     openal_LIBS="$LIBS"
     LIBS=$save_LIBS
     ;;
@@ -313,6 +317,19 @@ if test "$OPENAL_OK" == "no"; then
     echo "configure aborted."
     exit
 fi
+
+if test "$ALUT_OK" == "no"; then
+    echo
+    echo "You *must* have the alut library installed on your system to build"
+    echo "SimGear!"
+    echo
+    echo "Please see README.OpenAL for more details."
+    echo
+    echo "configure aborted."
+    exit
+fi
+
+
 
 LIBS="$base_LIBS"
 
