Move SGReadFileCallback from model.cxx to public class ModelRegistry
Move SGReadFileCallback and all its help classes into a new
ModelRegistry class that also provides an interface to add custom
callbacks for specific file extensions. SGReaderWriterBTG uses that to
keep any further processing from being done on .btg files. Various
namespace-releated cleanup was done on this code too.

--- a/simgear/scene/model/Makefile.am
+++ b/simgear/scene/model/Makefile.am
@@ -9,6 +9,7 @@ include_HEADERS = \
 	location.hxx \
 	model.hxx \
 	modellib.hxx \
+	ModelRegistry.hxx \
 	persparam.hxx \
 	placement.hxx \
 	placementtrans.hxx \
@@ -23,6 +24,7 @@ libsgmodel_a_SOURCES = \
 	location.cxx \
 	model.cxx \
 	modellib.cxx \
+	ModelRegistry.cxx \
 	persparam.cxx \
 	placement.cxx \
 	placementtrans.cxx \
