Start of cleanup of scene graph node masks

--- a/simgear/scene/util/Makefile.am
+++ b/simgear/scene/util/Makefile.am
@@ -14,6 +14,7 @@ include_HEADERS = \
 	SGSceneUserData.hxx \
 	SGStateAttributeVisitor.hxx \
 	SGTextureStateAttributeVisitor.hxx \
+	RenderConstants.hxx \
 	VectorArrayAdapter.hxx
 
 
